# AgildoDockCpp_Wayland

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DockBlurBackground.qml  DockGlobalTooltip.qml  DockIconContextMenu.qml  DockIconDelegate.qml  DockSettingsWindow.qml  DockSwipeHideArea.qml  DockWarningBanner.qml  DockWidgetStrip.qml  LICENSE  README.md  README_PT.md  dock_bridge.cpp  dock_bridge.h  dock_browser_downloads.cpp  dock_browser_downloads.h  dock_browser_integration.cpp  dock_browser_integration.h  dock_browser_utils.cpp  dock_browser_utils.h  dock_global_shortcuts.cpp  dock_global_shortcuts.h  dock_unity_launcher.cpp  dock_unity_launcher.h  dock_window_management.cpp  dock_window_management.h  dock_zen_downloads.cpp  dock_zen_downloads.h  fix_appcount.py  fix_cycle.py  fix_dolphin.py  fix_qprocess.py  global_shortcuts.cpp  global_shortcuts.h  kwin_dbus_helper.cpp  kwin_dbus_helper.h  (+11 more)
.github/workflows/: build.yml  lint.yml
data/: org.agildosoft.agildodock.desktop
data/metainfo/: org.agildosoft.agildodock.metainfo.xml
i18n/: agildodock_en_US.ts  agildodock_pt_BR.ts  agildodock_pt_PT.ts
kwin-effect-suck-minimize/: metadata.json
kwin-effect-suck-minimize/contents/code/: main.js
packaging/: PKGBUILD  generate_icons.sh  make_dist.sh  publicar-no-github.sh
packaging/aur/: .SRCINFO  LICENSE  PKGBUILD  README.txt  agildodock.install  enviar-para-aur.sh  prepare-for-aur.sh
plasmoid/agildodock-preview/: metadata.json
plasmoid/agildodock-preview/contents/ui/: main.qml
tests/: test_dock_browser_utils.cpp  test_dock_matching.cpp
